--- a/css/index.sass
+++ b/css/index.sass
@@ -10,7 +10,7 @@ h1,h2,h3,h4,h5,h6,p,a,li,.footer-c,ul,button,.order-list
   font-weight: 500
 
 :root
-  --white: rgb(255, 255, 255)
+  --white: rgb(255, 255, 255) // Eltárolja a Színt
   --white-sec: rgb(200, 200, 200)
 
 ul, button
@@ -51,7 +51,7 @@ ul, button
     font-size: 18px
     font-weight: 200
   
-    color: var(--white-sec)
+    color: var(--white-sec) // Meghívja az eltárolt színt
 
   &links-c
     position: relative
